# kpa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COVERAGE.md  DEV_PLAN.md  EDITABLE_SURFACE.md  GRAPHICAL_REVIEW_OPTIONS.md  HANDOFF.md  PRD.md  SLIDE_KINDS.json  SLIDE_KINDS.md  STEP4_BRIEF.md
schemas/14.5/: CHANGES.md
scripts/: normalize_schema_filenames.sh  slide_kind_inventory.py
src/kpa/: __init__.py  _version.py  animations.py  assets.py  cli.py  color.py  coords.py  deck.py  escape.py  layout.py  media.py  new_slide.py  objects.py  richtext.py  shapes_data.py  slide_kinds.py  styles.py  tst_cells.py  validator.py  visual_smoke.py
tests/: test_animations_4c4.py  test_chart_writes_4c6_2.py  test_data_shapes_4c6.py  test_edits.py  test_escape_4c7.py  test_group_writes_4c3_2.py  test_layout_4c3.py  test_loader_and_groups.py  test_media_4c5.py  test_new_slide_4c8_2.py  test_parity.py  test_phase1_close_4c8.py  test_richtext_4c9.py  test_shape_styling_4c2.py  test_styling_4c1.py  test_table_cells_4c6_3.py  test_table_writes_4c6_2.py  test_visual_smoke_4c10.py
